<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/friend_list_border"
        android:backgroundTint="@color/light_gray"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="15dp">

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/username"
            android:textColor="@color/deep_green"
            android:textStyle="bold"
            android:textSize="27sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/useremail_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:text="@string/useremail"/>

    </LinearLayout>

    <TextView
        android:id="@+id/invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_id"
        android:layout_marginStart="15dp"
        android:textSize="23sp"/>


</LinearLayout>